Dec 15, 2008
		- Modified HoldVarEvent to use AddAnalogValue instead of SetAnalogValue so that it does not override mouse movement, only adds to it.

Nov 24, 2008
		- Added 'joycaps' command which will display joystick capabilities, useful for binding non-xinput joysticks.
		- Added support for joyslider0 and joyslider1 axes, some controllers use these axes.
		
Nov 20, 2008

		- Fixed a bug in Driving Mode that made it hard to play with.
		
		- Added RightStick and LeftStick to the raw output area.

Nov 18, 2008

		- Fixed a bug that caused game specific algorithms to go haywire when an acceleration of 0 was used.
		- Fixed a bug in Vector2 that caused small vectors not to act properly
		- Fixed a bug that caused xEmulate to use max cpu when it was running but did not have window focus, it behaves a bit better in this scenario now :)

		- Added Bioshock 
		- Added Left For Dead
		- Added Rainbow 6 - Vegas
		- Added Orange Box
		- Added "Stick Output" which gives a visual representation of the RS and LS output.
		- Added "Driving Mode", the variable is "drivingmode", when set true the mouse movement is not reset per frame.
		- Added "Detect Joysticks" button, as well as the command "initjoy" which will initialize joysticks if you plug them in after the application is already running.

Nov 14, 2008

	- Fixed a bug in TextMode that caused it to not work at all, running at a 15 textmode rate works pretty well now.

Nov 12, 2008

	- Fixed a bug that caused rapid fire to only work for A, and triggers

Nov 11, 2008
	- Fixed a bug that caused Game Specific Algorithm to go haywire at high speeds.
	- Fixed a number overflow in Vector2.Length
	
	- Added ".break" which can be used to skip the remainder of a macro if the button is no longer pressed:
		* bind 360start .start;wait 2000;.break;guide; 
		* This functionality was specifically added to help map the 360 controller.  Because on a PC you cannot check if the guide
		button is pressed, you must 
		
	